# miden-vm

./: .clippy.toml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  background.html  deny.toml  index.html  lychee.toml  print.html  rust-toolchain.toml  searchindex.js  searchindex.json
air/: Cargo.toml  README.md
air/src/: errors.rs  lib.rs  options.rs  proof.rs  utils.rs
air/src/config/: blake3.rs  keccak.rs  mod.rs  poseidon2.rs  rpo.rs  rpx.rs
air/src/constraints/: mod.rs  range.rs
air/src/constraints/chiplets/: mod.rs
air/src/constraints/stack/: mod.rs
air/src/trace/: aux_trace.rs  main_trace.rs  mod.rs  rows.rs
air/src/trace/chiplets/: hasher.rs
air/src/trace/decoder/: mod.rs
core/: Cargo.toml  README.md
core/benches/: mast_forest_merge.rs
core/src/: errors.rs  event_id.rs  kernel.rs  lib.rs  precompile.rs  program.rs  proof.rs  sys_events.rs
core/src/advice/: map.rs
core/src/chiplets/: hasher.rs
core/src/mast/: decorator_storage.rs  mod.rs  multi_forest_node_iterator.rs  node_builder_utils.rs  node_fingerprint.rs  tests.rs
core/src/mast/debuginfo/: decorator_storage.rs  mod.rs  node_decorator_storage.rs
core/src/mast/merger/: mod.rs  tests.rs
core/src/mast/node/: call_node.rs  decorator_store.rs  dyn_node.rs  external.rs  join_node.rs  loop_node.rs  mast_forest_contributor.rs  mod.rs  split_node.rs
core/src/mast/serialization/: basic_blocks.rs  decorator.rs  info.rs  mod.rs  string_table.rs  tests.rs
core/src/operations/: mod.rs
core/src/operations/decorators/: assembly_op.rs  debug.rs  mod.rs
core/src/stack/: inputs.rs  mod.rs  outputs.rs  tests.rs
core/src/utils/: col_matrix.rs  mod.rs
crates/assembly/: Cargo.toml  README.md
crates/assembly-syntax/: Cargo.toml
crates/assembly-syntax/src/: arbitrary.rs  lib.rs  parse.rs
crates/assembly-syntax/src/ast/: alias.rs  constants.rs  op.rs  (+10 more)
crates/assembly/src/: assembler.rs  basic_block_builder.rs  fmp.rs  lib.rs  mast_forest_builder.rs  mast_forest_merger_tests.rs  procedure.rs  testing.rs  tests.rs
crates/assembly/tests/: issue_2456_test.rs
crates/debug/types/: Cargo.toml
crates/lib/core/: Cargo.toml  README.md  build.rs
crates/mast-package/: Cargo.toml
crates/mast-package/src/: artifact.rs  lib.rs
crates/utils-core-derive/: Cargo.toml  README.md
crates/utils-core-derive/src/: lib.rs
crates/utils-indexing/: Cargo.toml  README.md
crates/utils-indexing/src/: lib.rs
crates/utils/diagnostics/: Cargo.toml
crates/utils/serde-test-macros/: Cargo.toml
miden-vm/: Cargo.toml  README.md  lib.masl
miden-vm/benches/: build_trace.rs  deserialize_core_lib.rs  deserialize_libcore.rs  program_execution.rs  program_execution_fast.rs  program_execution_for_trace.rs
miden-vm/masm-examples/debug/: debug.masm
miden-vm/masm-examples/merkle_store/: merkle_store.masm
miden-vm/masm-examples/nprime/: nprime.masm
miden-vm/src/: internal.rs  lib.rs  main.rs
miden-vm/src/cli/: bundle.rs  compile.rs  data.rs  mod.rs  prove.rs  repl.rs  run.rs  utils.rs  verify.rs
miden-vm/src/repl/: mod.rs
miden-vm/src/tools/: mod.rs
miden-vm/tests/integration/: exec.rs  exec_iters.rs  main.rs  prove_verify.rs
package/: Cargo.toml
package/src/: lib.rs
package/src/dependency/: mod.rs
package/src/package/: manifest.rs  mod.rs  section.rs  serialization.rs
processor/: Cargo.toml  README.md
processor/src/: continuation_stack.rs  debug.rs  errors.rs  execution_options.rs  lib.rs  row_major_adapter.rs  tests.rs  utils.rs
processor/src/chiplets/: mod.rs  tests.rs
processor/src/decoder/: aux_hints.rs  block_stack.rs  mod.rs  tests.rs  trace.rs
processor/src/fast/: basic_block.rs  call_and_dyn.rs  circuit_eval.rs  crypto_ops.rs  execution_tracer.rs  external.rs  field_ops.rs  horner_ops.rs  io_ops.rs  join.rs  loop.rs  memory.rs  mod.rs  operation.rs  split.rs  stack_ops.rs  step.rs  sys_ops.rs  trace_state.rs  trace_state_builder.rs  tracer.rs  u32_ops.rs
processor/src/host/: debug.rs  default.rs  handlers.rs  mast_forest_store.rs  mod.rs
processor/src/operations/: circuit_eval.rs  crypto_ops.rs  ext2_ops.rs  field_ops.rs  fri_ops.rs  horner_ops.rs  io_ops.rs  mod.rs  stack_ops.rs  u32_ops.rs  utils.rs
processor/src/parallel/: basic_block.rs  call.rs  dyn.rs  execution.rs  join.rs  loop.rs  mod.rs  split.rs  tests.rs  trace_builder.rs  trace_row.rs
processor/src/processor/: mod.rs
processor/src/range/: aux_trace.rs  mod.rs  request.rs  tests.rs
processor/src/stack/: aux_trace.rs  mod.rs  overflow.rs  trace.rs
processor/src/system/: mod.rs
processor/src/test_utils/: mod.rs  test_consistency_host.rs
processor/src/tests/: debug.rs  debug_mode_decorator_tests.rs  decorator_bypass_spy_test.rs  decorator_execution_tests.rs  mod.rs
processor/src/trace/: mod.rs  utils.rs
prover/: Cargo.toml  README.md
prover/src/: lib.rs  proving_options.rs  trace_adapter.rs
stdlib/: Cargo.toml  README.md  build.rs
stdlib/asm/: mem.masm  sys.masm  word.masm
stdlib/asm/collections/: mmr.masm  smt.masm  sorted_array.masm
stdlib/asm/math/: u256.masm  u64.masm
stdlib/asm/stark/: public_inputs.masm
stdlib/asm/sys/: mod.masm
stdlib/benches/: compilation.rs
stdlib/docs/: mem.md  sys.md  word.md
stdlib/docs/collections/: smt.md  sorted_array.md
stdlib/docs/math/: u256.md  u64.md
stdlib/docs/pcs/: helper.md
stdlib/docs/stark/: constants.md  ood_frames.md  public_inputs.md  random_coin.md  utils.md
stdlib/docs/sys/: mod.md
stdlib/src/: lib.rs
stdlib/src/handlers/: ecdsa.rs  falcon_div.rs  keccak256.rs  mod.rs  smt_peek.rs  sorted_array.rs  u64_div.rs
stdlib/tests/: helpers.rs  main.rs
stdlib/tests/collections/: mmr.rs  smt.rs  sorted_array.rs
stdlib/tests/crypto/: blake3.rs  circuit_evaluation.rs  ecdsa_secp256k1.rs  elgamal.rs  falcon.rs  keccak256.rs  keccak256_deprecated.rs  mod.rs  rpo.rs  sha256.rs
stdlib/tests/math/: mod.rs  u64_mod.rs
stdlib/tests/mem/: mod.rs
stdlib/tests/stark/: mod.rs
stdlib/tests/sys/: mod.rs
stdlib/tests/word/: mod.rs
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs
(+884 files in other folders)
