[workspace]
members = [
    "air",
    "core",
    "crates/*",
    "miden-vm",
    "processor",
    "prover",
    "stdlib",
    "verifier",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Miden contributors"]
homepage = "https://miden.xyz"
repository = "https://github.com/0xMiden/miden-vm"
exclude = [".github/"]
rust-version = "1.90"
version = "0.19.0"

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true

[profile.test-dev]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
# Workspace crates
miden-air = { path = "./air", version = "0.19", default-features = false }
miden-assembly = { path = "./crates/assembly", version = "0.19", default-features = false }
miden-assembly-syntax = { path = "./crates/assembly-syntax", version = "0.19", default-features = false }
miden-core = { path = "./core", version = "0.19", default-features = false }
miden-debug-types = { path = "./crates/debug-types", version = "0.19", default-features = false }
miden-mast-package = { path = "./crates/mast-package", version = "0.19", default-features = false }
miden-processor = { path = "./processor", version = "0.19", default-features = false }
miden-serde-test-macros = { path = "./crates/serde-test-macros", default-features = false }
miden-prover = { path = "./prover", version = "0.19", default-features = false }
miden-stdlib = { path = "./stdlib", version = "0.19", default-features = false }
miden-utils-diagnostics = { path = "./crates/utils-diagnostics", version = "0.19", default-features = false }
miden-utils-indexing = { path = "./crates/utils-indexing", version = "0.19", default-features = false }
miden-utils-sync = { path = "./crates/utils-sync", version = "0.19", default-features = false }
miden-utils-testing = { path = "./crates/test-utils", version = "0.1", package = "miden-test-utils" }
miden-verifier = { path = "./verifier", version = "0.19", default-features = false }

# Miden crates
miden-crypto = { version = "0.17", default-features = false }
miden-formatting = { version = "0.1", default-features = false }
midenc-hir-type = { version = "0.4", default-features = false }

# Third-party crates
blake3 = "1.8"
criterion = "0.7"
env_logger = { version = "0.11" }
insta = { version = "1.43", default-features = false, features = ["colors"] }
log = { version = "0.4", default-features = false }
paste = { version = "1.0", default-features = false }
proptest = { version = "1.8", default-features = false, features = ["no_std", "alloc"] }
proptest-derive = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-untagged = "0.1"
smallvec = { version = "1.15", default-features = false, features = ["union", "const_generics", "const_new"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.47", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
winter-air = { version = "0.13", default-features = false }
winter-fri = "0.13"
winter-math = { version = "0.13", default-features = false }
winter-prover = { version = "0.13", default-features = false }
winter-rand-utils = "0.13"
winter-utils = { version = "0.13", default-features = false }
winter-verifier = { version = "0.13", default-features = false }
