[workspace]
members = [
    "air",
    "core",
    "crates/assembly",
    "crates/assembly-syntax",
    "crates/debug-types",
    "crates/lib/core",
    "crates/mast-package",
    "crates/test-serde-macros",
    "crates/test-utils",
    "crates/utils-core-derive",
    "crates/utils-diagnostics",
    "crates/utils-indexing",
    "crates/utils-sync",
    "miden-vm",
    "processor",
    "prover",
    "verifier",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Miden contributors"]
homepage = "https://miden.xyz"
repository = "https://github.com/0xMiden/miden-vm"
exclude = [".github/"]
rust-version = "1.90"
version = "0.21.0"

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true

[profile.test-dev]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
# Workspace crates
miden-air = { path = "./air", version = "0.21", default-features = false }
miden-assembly = { path = "./crates/assembly", version = "0.21", default-features = false }
miden-assembly-syntax = { path = "./crates/assembly-syntax", version = "0.21", default-features = false }
miden-core = { path = "./core", version = "0.21", default-features = false }
miden-debug-types = { path = "./crates/debug-types", version = "0.21", default-features = false }
miden-mast-package = { path = "./crates/mast-package", version = "0.21", default-features = false }
miden-processor = { path = "./processor", version = "0.21", default-features = false }
miden-test-serde-macros = { path = "./crates/test-serde-macros", default-features = false }
miden-prover = { path = "./prover", version = "0.21", default-features = false }
miden-core-lib = { path = "./crates/lib/core", version = "0.21", default-features = false }
miden-utils-core-derive = { path = "./crates/utils-core-derive", version = "0.21", default-features = false }
miden-utils-diagnostics = { path = "./crates/utils-diagnostics", version = "0.21", default-features = false }
miden-utils-indexing = { path = "./crates/utils-indexing", version = "0.21", default-features = false }
miden-utils-sync = { path = "./crates/utils-sync", version = "0.21", default-features = false }
miden-utils-testing = { path = "./crates/test-utils", package = "miden-test-utils" }
miden-verifier = { path = "./verifier", version = "0.21", default-features = false }

# Miden crates
miden-crypto = { version = "0.21", default-features = false }
miden-formatting = { version = "0.1", default-features = false }
midenc-hir-type = { version = "0.4", default-features = false }

# Constraints to resolve duplicates
semver = "1.0"
syn = "1.0"
windows-sys = "0.61"

# Third-party crates
blake3 = { version = "1.8" }
criterion = { version = "0.7" }
derive_more = { version = "2.0", features = ["from"] }
env_logger = { version = "0.11" }
insta = { version = "1.43", default-features = false, features = ["colors"] }
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
log = { version = "0.4", default-features = false }
paste = { version = "1.0", default-features = false }
proptest = { version = "1.8", default-features = false, features = ["no_std", "alloc"] }
proptest-derive = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-untagged = {version = "0.1" }
smallvec = { version = "1.15", default-features = false, features = ["union", "const_generics", "const_new"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.48", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
rand = { version = "0.9", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Upstream Plonky3 dependencies
p3-air           = { version = "0.4.2", default-features = false }
p3-blake3        = { version = "0.4.2", default-features = false }
p3-challenger    = { version = "0.4.2", default-features = false }
p3-commit        = { version = "0.4.2", default-features = false }
p3-dft           = { version = "0.4.2", default-features = false }
p3-field         = { version = "0.4.2", default-features = false }
p3-goldilocks    = { version = "0.4.2", default-features = false }
p3-interpolation = { version = "0.4.2", default-features = false }
p3-keccak        = { version = "0.4.2", default-features = false }
p3-matrix        = { version = "0.4.2", default-features = false }
p3-maybe-rayon   = { version = "0.4.2", default-features = false }
p3-merkle-tree   = { version = "0.4.2", default-features = false }
p3-poseidon2     = { version = "0.4.2", default-features = false }
p3-symmetric     = { version = "0.4.2", default-features = false }
p3-uni-stark     = { version = "0.4.2", default-features = false }
p3-util          = { version = "0.4.2", default-features = false }

# Miden-specific Plonky3 crates
p3-miden-air     = { version = "0.4.2", default-features = false }
p3-miden-fri     = { version = "0.4.2", default-features = false }
p3-miden-prover  = { version = "0.4.2", default-features = false }

# WASM support
getrandom = { version = "0.2", default-features = false, features = ["js"] }


