[package]
name = "miden-air"
version.workspace = true
description = "Algebraic intermediate representation of Miden VM processor"
documentation = "https://docs.rs/miden-air"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-core/std", "thiserror/std"]
concurrent = ["std"]
testing = []

[dependencies]
# Miden dependencies
miden-core = { workspace = true, features = ["serde"] }
miden-crypto.workspace = true
miden-utils-indexing.workspace = true

# External dependencies
thiserror.workspace = true
tracing.workspace = true

# Plonky3 dependencies
p3-blake3.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-miden-fri.workspace = true
p3-keccak.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true

# Serialization
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
