[package]
name = "miden-core"
version.workspace = true
description = "Miden VM core components"
documentation = "https://docs.rs/miden-core"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = [
    "miden-crypto/std",
    "miden-debug-types/std",
    "miden-formatting/std",
    "thiserror/std",
    "winter-math/std",
    "winter-utils/std",
]
serde = [
    "dep:serde",
    "dep:serde_json",
    "miden-crypto/serde",
    "miden-debug-types/serde",
    "winter-math/serde",
]
arbitrary = ["dep:proptest", "dep:proptest-derive"]
testing = ["arbitrary" ]

[dependencies]
# Miden dependencies
miden-crypto.workspace = true
miden-debug-types.workspace = true
miden-formatting.workspace = true
miden-serde-test-macros = { workspace = true }

# External dependencies
enum_dispatch = { version =  "0.3" }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
winter-math.workspace = true
winter-utils.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
winter-rand-utils.workspace = true
