[package]
name = "miden-core"
version.workspace = true
description = "Miden VM core components"
documentation = "https://docs.rs/miden-core"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
exclude = ["*.snap"]

[lib]
bench = false
doctest = false

[[bench]]
name = "mast_forest_merge"
required-features = ["arbitrary"]
harness = false

[features]
default = ["std"]
std = [
    "miden-crypto/std",
    "miden-debug-types/std",
    "miden-formatting/std",
    "miden-utils-indexing/std",
    "miden-utils-sync/std",
    "thiserror/std",
]
serde = [
    "dep:serde",
    "miden-crypto/serde",
    "miden-debug-types/serde",
    "miden-utils-indexing/serde",
]
arbitrary = ["dep:proptest", "dep:proptest-derive"]
testing = ["arbitrary" ]

[dependencies]
# Miden dependencies
miden-crypto.workspace = true
miden-debug-types.workspace = true
miden-formatting.workspace = true
miden-utils-core-derive.workspace = true
miden-utils-indexing.workspace = true
miden-utils-sync.workspace = true

# External dependencies
derive_more.workspace = true
itertools.workspace = true
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }
insta.workspace = true
miden-test-serde-macros.workspace = true
proptest.workspace = true
serde_json = { workspace = true }
miden-utils-testing.workspace = true
