[package]
name = "miden-mast-package"
version = "0.18.0"
description = "Package containing a compiled Miden MAST artifact with declared dependencies and exports"
documentation = "https://docs.rs/miden-mast-package/0.18.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["package", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std", "serde"]
arbitrary = [
    "dep:proptest-derive",
    "dep:proptest",
    "miden-assembly-syntax/arbitrary",
]
std = [
    "miden-assembly-syntax/std",
    "miden-core/std",
    "serde/std",
    "thiserror/std",
]
serde = [
    "dep:serde",
    "dep:serde-untagged",
    "miden-assembly-syntax/serde",
    "miden-core/serde",
]

[dependencies]
derive_more = { version = "2.0", features = ["from"] }
miden-assembly-syntax.workspace = true
miden-core.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-untagged = { workspace = true, optional = true }
thiserror.workspace = true
