[package]
name = "miden-processor"
version.workspace = true
description = "Miden VM processor"
documentation = "https://docs.rs/miden-processor"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["miden", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
exclude = ["*.snap"]

[lib]
bench = false
doctest = false

[features]
concurrent = ["std", "winter-prover/concurrent"]
default = ["std"]
std = [
    "miden-core/std",
    "miden-debug-types/std",
    "miden-utils-diagnostics/std",
    "winter-prover/std",
    "thiserror/std",
]
testing = ["miden-air/testing"]
# Removes proper error context from the error messages. Enable in production builds that need
# maximal performance.
no_err_ctx = []
# Like `testing`, but slows down the processor speed to make it easier to debug.
bus-debugger = ["testing", "miden-air/testing"]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
miden-utils-indexing.workspace = true

# External dependencies
paste.workspace = true
rayon = { version = "1.10", default-features = false }
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
winter-prover.workspace = true
itertools.workspace = true

[dev-dependencies]
miden-assembly.workspace = true
miden-utils-testing.workspace = true
insta.workspace = true
pretty_assertions = { version = "1.4" }
proptest.workspace = true
rstest = { version = "0.26" }
winter-fri.workspace = true
winter-utils.workspace = true
