[package]
name = "miden-processor"
version.workspace = true
description = "Miden VM processor"
documentation = "https://docs.rs/miden-processor"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["miden", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
exclude = ["*.snap"]

[lib]
bench = false
doctest = false

[features]
concurrent = ["std"]
default = ["std"]
std = [
    "miden-core/std",
    "miden-debug-types/std",
    "miden-utils-diagnostics/std",
    "thiserror/std",
]
testing = ["miden-air/testing"]
# Like `testing`, but slows down the processor speed to make it easier to debug.
bus-debugger = ["testing", "miden-air/testing"]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
miden-utils-indexing.workspace = true

# External dependencies
itertools.workspace = true
p3-matrix.workspace = true
paste.workspace = true
rayon = { version = "1.10", default-features = false }
tracing.workspace = true
thiserror.workspace = true

# Platform-specific tokio dependencies
# On non-wasm targets, enable rt-multi-thread for better performance
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

# On wasm32, only basic tokio features are supported
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
miden-assembly.workspace = true
miden-utils-testing.workspace = true
insta.workspace = true
pretty_assertions = { version = "1.4" }
proptest.workspace = true
rstest = { version = "0.26" }
