[package]
name = "miden-prover"
version.workspace = true
description = "Miden VM prover"
documentation = "https://docs.rs/miden-prover"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
concurrent = ["std", "miden-crypto/concurrent", "miden-processor/concurrent"]
std = ["miden-air/std", "miden-debug-types/std", "miden-processor/std"]

[dependencies]
# Miden dependencies
miden-air.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-processor.workspace = true
miden-crypto.workspace = true

# External dependencies
bincode = "1.3"
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
serde.workspace = true
tracing.workspace = true

# Platform-specific tokio dependencies
# On non-wasm targets, enable rt-multi-thread for better performance
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

# On wasm32, only basic tokio features are supported
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

