[package]
name = "miden-stdlib"
version.workspace = true
description = "Miden VM standard library"
documentation = "https://docs.rs/miden-stdlib"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["miden", "program", "stdlib"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[[bench]]
name = "compilation"
harness = false

[[test]]
name = "stdlib"
path = "tests/main.rs"

[features]
default = ["std"]
std = ["miden-assembly/std", "miden-utils-sync/std"]
with-debug-info = []

[dependencies]
# Miden dependencies
miden-assembly.workspace = true
miden-core.workspace = true
miden-crypto.workspace = true
miden-processor.workspace = true
miden-utils-sync.workspace = true

# External dependencies
thiserror.workspace = true

[dev-dependencies]
blake3.workspace = true
criterion.workspace = true
miden-air.workspace = true
miden-processor = { workspace = true, features = ["testing"] }
miden-utils-testing.workspace = true
num = "0.4"
num-bigint = "0.4"
pretty_assertions = "1.4"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
rstest = "0.26"
serde_json.workspace = true
sha2 = "0.10"
sha3 = "0.10"
winter-air.workspace = true
winter-fri.workspace = true

[build-dependencies]
env_logger.workspace = true
miden-assembly = { workspace = true, features = ["std"] }
