[package]
name = "miden-mast-package"
version.workspace = true
description = "Package containing a compiled Miden MAST artifact with declared dependencies and exports"
documentation = "https://docs.rs/miden-mast-package"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["package", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std", "serde"]
arbitrary = ["dep:proptest-derive", "dep:proptest", "miden-assembly-syntax/arbitrary"]
std = ["miden-assembly-syntax/std", "miden-core/std", "serde/std", "thiserror/std"]
serde = ["dep:serde", "dep:serde-untagged", "miden-assembly-syntax/serde", "miden-core/serde"]

[dependencies]
# Miden dependencies
miden-assembly-syntax.workspace = true
miden-core.workspace = true

# External dependencies
derive_more.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde-untagged = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
miden-test-serde-macros.workspace = true
serde_json = { workspace = true }
