[package]
name = "miden-utils-core-derive"
version.workspace = true
description = "Proc macro to derive enum dispatch trait implementations on miden-core structs"
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers", "no-std"]
keywords = ["enum", "proc-macro", "derive", "enum_dispatch"]
publish = false
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { workspace = true, features = ["derive", "extra-traits", "full"] }
