[package]
name = "miden-utils-indexing"
version.workspace = true
description = "Type-safe u32-indexed vector utilities for Miden"
readme = "README.md"
categories = ["development-tools", "no-std"]
keywords = ["miden", "indexing", "type-safe"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
# Required dependencies
miden-crypto.workspace = true
thiserror.workspace = true

# Optional dependencies
serde = { workspace = true, optional = true }

[dev-dependencies]