[package]
name = "miden-serde-test-macros"
version = "0.1.0"
description = "Proc macros for serde roundtrip testing in Miden VM"
readme = "README.md"
categories = ["development-tools::testing", "no-std"]
keywords = ["miden", "serde", "testing", "proc-macro"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive", "extra-traits", "full"] }
proptest.workspace = true
proptest-derive.workspace = true

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true, features = ["derive"] }